--- a/MultiCdnApi/src/MultiCdnApi.csproj
+++ b/MultiCdnApi/src/MultiCdnApi.csproj
@@ -4,10 +4,9 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.3.0" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.15.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="AzureExtensions.Swashbuckle" Version="3.2.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
