--- a/MultiCdnApi/src/MultiCdnApi.csproj
+++ b/MultiCdnApi/src/MultiCdnApi.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.25" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.11.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     <PackageReference Include="AzureExtensions.Swashbuckle" Version="3.2.2" />
   </ItemGroup>
