--- a/MultiCdnApi/src/MultiCdnApi.csproj
+++ b/MultiCdnApi/src/MultiCdnApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="1.25.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     <PackageReference Include="AzureExtensions.Swashbuckle" Version="3.3.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
